# InvertedIndex-Generator

./: CMakeLists.txt  README.md
HotWords/: Inverted_Index100.txt  Inverted_Index1000.txt  Inverted_Index10000.txt  Inverted_Index25000.txt  Inverted_Index500.txt  Inverted_Index50000.txt
invertwords/: Inverted_Index.txt
src/: Process.cpp  Process.h
